# nlp_project_chatbot

./: .gitignore  README.md  chat_history.txt  environment.yaml  pyproject.toml  requirements.txt
data/: en_wikipedia_org__wiki_GPT-4o.html  en_wikipedia_org__wiki_List_of_acronyms__A.html
notebooks/: Colbertv2.ipynb  late_chunking.ipynb  naive_chunking.ipynb  rag_Hybrid_Search.ipynb  rag_Hybrid_Search_Chroma.ipynb  rag_Hybrid_Search_pinecone.ipynb  rag_reranking_langchain.ipynb  rag_reranking_pinecone.ipynb  run_test.ipynb
notebooks/Colbert/Analyse_performance/: Performance_colbertv2_library.ipynb  Performance_colbertv2_ragatouille.ipynb
notebooks/Colbert/Colbert_Ragatouille/: Colbert_langchain_v2.ipynb  Colbert_langchain_v3.ipynb
notebooks/Colbert/Colbert_library/: Generation_embedding.ipynb  search.ipynb
src/nlp_chat_bot/: app.py  rag.py  start_app.py
src/nlp_chat_bot/doc_loader/: document_loader.py  test_data_csv_loader.py
src/nlp_chat_bot/model/: late_chunking_embedding.py  minilm.py  stella.py
src/nlp_chat_bot/model/embedding/: late_chunking_embedding.py  minilm.py  stella.py
src/nlp_chat_bot/model/llm/: gemma.py  mistral.py
src/nlp_chat_bot/rag/: abstract_query_translation_rag.py  abstract_rag.py  classic_rag.py  query_translation_rag_decomposition.py  query_translation_rag_fusion.py
src/nlp_chat_bot/splitter/: basic_splitter.py
src/nlp_chat_bot/vector_store/: abstract_chroma_vector_store_builder.py  chroma_vector_store_builder.py  late_chunking_chroma_vector_store_builder.py  naive_chunking_chroma_vector_store_builder.py
